// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarRating matches snapshot when disabled 1`] = `
<div
  className="tw:flex tw:space-x-1 tw:text-2xl tw:opacity-50"
>
  <button
    aria-label="Rate 1"
    className="tw:focus:outline-none tw:bg-transparent"
    disabled={true}
    key="1"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      {
        "background": "none",
        "border": "none",
        "cursor": "default",
        "padding": 0,
      }
    }
    tabIndex={-1}
    type="button"
  >
    <FontAwesomeIcon
      color="#F8B84E"
      icon={
        {
          "icon": [
            576,
            512,
            [],
            "f005",
            "M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z",
          ],
          "iconName": "star",
          "prefix": "fas",
        }
      }
    />
  </button>
  <button
    aria-label="Rate 2"
    className="tw:focus:outline-none tw:bg-transparent"
    disabled={true}
    key="2"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      {
        "background": "none",
        "border": "none",
        "cursor": "default",
        "padding": 0,
      }
    }
    tabIndex={-1}
    type="button"
  >
    <FontAwesomeIcon
      color="#F8B84E"
      icon={
        {
          "icon": [
            576,
            512,
            [],
            "f005",
            "M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z",
          ],
          "iconName": "star",
          "prefix": "fas",
        }
      }
    />
  </button>
  <button
    aria-label="Rate 3"
    className="tw:focus:outline-none tw:bg-transparent"
    disabled={true}
    key="3"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      {
        "background": "none",
        "border": "none",
        "cursor": "default",
        "padding": 0,
      }
    }
    tabIndex={-1}
    type="button"
  >
    <FontAwesomeIcon
      color="#F8B84E"
      icon={
        {
          "icon": [
            576,
            512,
            [],
            "f005",
            "M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z",
          ],
          "iconName": "star",
          "prefix": "fas",
        }
      }
    />
  </button>
  <button
    aria-label="Rate 4"
    className="tw:focus:outline-none tw:bg-transparent"
    disabled={true}
    key="4"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      {
        "background": "none",
        "border": "none",
        "cursor": "default",
        "padding": 0,
      }
    }
    tabIndex={-1}
    type="button"
  >
    <FontAwesomeIcon
      color="#F8B84E"
      icon={
        {
          "icon": [
            576,
            512,
            [],
            "f005",
            "M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z",
          ],
          "iconName": "star",
          "prefix": "fas",
        }
      }
    />
  </button>
  <button
    aria-label="Rate 5"
    className="tw:focus:outline-none tw:bg-transparent"
    disabled={true}
    key="5"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      {
        "background": "none",
        "border": "none",
        "cursor": "default",
        "padding": 0,
      }
    }
    tabIndex={-1}
    type="button"
  >
    <FontAwesomeIcon
      color="#F8B84E"
      icon={
        {
          "icon": [
            536,
            512,
            [],
            "f5c0",
            "M508.55 171.51L362.18 150.2 296.77 17.81C290.89 5.98 279.42 0 267.95 0c-11.4 0-22.79 5.9-28.69 17.81l-65.43 132.38-146.38 21.29c-26.25 3.8-36.77 36.09-17.74 54.59l105.89 103-25.06 145.48C86.98 495.33 103.57 512 122.15 512c4.93 0 10-1.17 14.87-3.75l130.95-68.68 130.94 68.7c4.86 2.55 9.92 3.71 14.83 3.71 18.6 0 35.22-16.61 31.66-37.4l-25.03-145.49 105.91-102.98c19.04-18.5 8.52-50.8-17.73-54.6zm-121.74 123.2l-18.12 17.62 4.28 24.88 19.52 113.45-102.13-53.59-22.38-11.74.03-317.19 51.03 103.29 11.18 22.63 25.01 3.64 114.23 16.63-82.65 80.38z",
          ],
          "iconName": "star-half-alt",
          "prefix": "fas",
        }
      }
    />
  </button>
</div>
`;

exports[`StarRating matches snapshot with default props 1`] = `
<div
  className="tw:flex tw:space-x-1 tw:text-2xl"
>
  <button
    aria-label="Rate 1"
    className="tw:focus:outline-none tw:bg-transparent"
    disabled={false}
    key="1"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      {
        "background": "none",
        "border": "none",
        "cursor": "pointer",
        "padding": 0,
      }
    }
    tabIndex={0}
    type="button"
  >
    <FontAwesomeIcon
      color="#F8B84E"
      icon={
        {
          "icon": [
            576,
            512,
            [
              11088,
              61446,
            ],
            "f005",
            "M287.9 0c9.2 0 17.6 5.2 21.6 13.5l68.6 141.3 153.2 22.6c9 1.3 16.5 7.6 19.3 16.3s.5 18.1-5.9 24.5L433.6 328.4l26.2 155.6c1.5 9-2.2 18.1-9.7 23.5s-17.3 6-25.3 1.7l-137-73.2L151 509.1c-8.1 4.3-17.9 3.7-25.3-1.7s-11.2-14.5-9.7-23.5l26.2-155.6L31.1 218.2c-6.5-6.4-8.7-15.9-5.9-24.5s10.3-14.9 19.3-16.3l153.2-22.6L266.3 13.5C270.4 5.2 278.7 0 287.9 0zm0 79L235.4 187.2c-3.5 7.1-10.2 12.1-18.1 13.3L99 217.9 184.9 303c5.5 5.5 8.1 13.3 6.8 21L171.4 443.7l105.2-56.2c7.1-3.8 15.6-3.8 22.6 0l105.2 56.2L384.2 324.1c-1.3-7.7 1.2-15.5 6.8-21l85.9-85.1L358.6 200.5c-7.8-1.2-14.6-6.1-18.1-13.3L287.9 79z",
          ],
          "iconName": "star",
          "prefix": "far",
        }
      }
    />
  </button>
  <button
    aria-label="Rate 2"
    className="tw:focus:outline-none tw:bg-transparent"
    disabled={false}
    key="2"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      {
        "background": "none",
        "border": "none",
        "cursor": "pointer",
        "padding": 0,
      }
    }
    tabIndex={0}
    type="button"
  >
    <FontAwesomeIcon
      color="#F8B84E"
      icon={
        {
          "icon": [
            576,
            512,
            [
              11088,
              61446,
            ],
            "f005",
            "M287.9 0c9.2 0 17.6 5.2 21.6 13.5l68.6 141.3 153.2 22.6c9 1.3 16.5 7.6 19.3 16.3s.5 18.1-5.9 24.5L433.6 328.4l26.2 155.6c1.5 9-2.2 18.1-9.7 23.5s-17.3 6-25.3 1.7l-137-73.2L151 509.1c-8.1 4.3-17.9 3.7-25.3-1.7s-11.2-14.5-9.7-23.5l26.2-155.6L31.1 218.2c-6.5-6.4-8.7-15.9-5.9-24.5s10.3-14.9 19.3-16.3l153.2-22.6L266.3 13.5C270.4 5.2 278.7 0 287.9 0zm0 79L235.4 187.2c-3.5 7.1-10.2 12.1-18.1 13.3L99 217.9 184.9 303c5.5 5.5 8.1 13.3 6.8 21L171.4 443.7l105.2-56.2c7.1-3.8 15.6-3.8 22.6 0l105.2 56.2L384.2 324.1c-1.3-7.7 1.2-15.5 6.8-21l85.9-85.1L358.6 200.5c-7.8-1.2-14.6-6.1-18.1-13.3L287.9 79z",
          ],
          "iconName": "star",
          "prefix": "far",
        }
      }
    />
  </button>
  <button
    aria-label="Rate 3"
    className="tw:focus:outline-none tw:bg-transparent"
    disabled={false}
    key="3"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      {
        "background": "none",
        "border": "none",
        "cursor": "pointer",
        "padding": 0,
      }
    }
    tabIndex={0}
    type="button"
  >
    <FontAwesomeIcon
      color="#F8B84E"
      icon={
        {
          "icon": [
            576,
            512,
            [
              11088,
              61446,
            ],
            "f005",
            "M287.9 0c9.2 0 17.6 5.2 21.6 13.5l68.6 141.3 153.2 22.6c9 1.3 16.5 7.6 19.3 16.3s.5 18.1-5.9 24.5L433.6 328.4l26.2 155.6c1.5 9-2.2 18.1-9.7 23.5s-17.3 6-25.3 1.7l-137-73.2L151 509.1c-8.1 4.3-17.9 3.7-25.3-1.7s-11.2-14.5-9.7-23.5l26.2-155.6L31.1 218.2c-6.5-6.4-8.7-15.9-5.9-24.5s10.3-14.9 19.3-16.3l153.2-22.6L266.3 13.5C270.4 5.2 278.7 0 287.9 0zm0 79L235.4 187.2c-3.5 7.1-10.2 12.1-18.1 13.3L99 217.9 184.9 303c5.5 5.5 8.1 13.3 6.8 21L171.4 443.7l105.2-56.2c7.1-3.8 15.6-3.8 22.6 0l105.2 56.2L384.2 324.1c-1.3-7.7 1.2-15.5 6.8-21l85.9-85.1L358.6 200.5c-7.8-1.2-14.6-6.1-18.1-13.3L287.9 79z",
          ],
          "iconName": "star",
          "prefix": "far",
        }
      }
    />
  </button>
  <button
    aria-label="Rate 4"
    className="tw:focus:outline-none tw:bg-transparent"
    disabled={false}
    key="4"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      {
        "background": "none",
        "border": "none",
        "cursor": "pointer",
        "padding": 0,
      }
    }
    tabIndex={0}
    type="button"
  >
    <FontAwesomeIcon
      color="#F8B84E"
      icon={
        {
          "icon": [
            576,
            512,
            [
              11088,
              61446,
            ],
            "f005",
            "M287.9 0c9.2 0 17.6 5.2 21.6 13.5l68.6 141.3 153.2 22.6c9 1.3 16.5 7.6 19.3 16.3s.5 18.1-5.9 24.5L433.6 328.4l26.2 155.6c1.5 9-2.2 18.1-9.7 23.5s-17.3 6-25.3 1.7l-137-73.2L151 509.1c-8.1 4.3-17.9 3.7-25.3-1.7s-11.2-14.5-9.7-23.5l26.2-155.6L31.1 218.2c-6.5-6.4-8.7-15.9-5.9-24.5s10.3-14.9 19.3-16.3l153.2-22.6L266.3 13.5C270.4 5.2 278.7 0 287.9 0zm0 79L235.4 187.2c-3.5 7.1-10.2 12.1-18.1 13.3L99 217.9 184.9 303c5.5 5.5 8.1 13.3 6.8 21L171.4 443.7l105.2-56.2c7.1-3.8 15.6-3.8 22.6 0l105.2 56.2L384.2 324.1c-1.3-7.7 1.2-15.5 6.8-21l85.9-85.1L358.6 200.5c-7.8-1.2-14.6-6.1-18.1-13.3L287.9 79z",
          ],
          "iconName": "star",
          "prefix": "far",
        }
      }
    />
  </button>
  <button
    aria-label="Rate 5"
    className="tw:focus:outline-none tw:bg-transparent"
    disabled={false}
    key="5"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      {
        "background": "none",
        "border": "none",
        "cursor": "pointer",
        "padding": 0,
      }
    }
    tabIndex={0}
    type="button"
  >
    <FontAwesomeIcon
      color="#F8B84E"
      icon={
        {
          "icon": [
            576,
            512,
            [
              11088,
              61446,
            ],
            "f005",
            "M287.9 0c9.2 0 17.6 5.2 21.6 13.5l68.6 141.3 153.2 22.6c9 1.3 16.5 7.6 19.3 16.3s.5 18.1-5.9 24.5L433.6 328.4l26.2 155.6c1.5 9-2.2 18.1-9.7 23.5s-17.3 6-25.3 1.7l-137-73.2L151 509.1c-8.1 4.3-17.9 3.7-25.3-1.7s-11.2-14.5-9.7-23.5l26.2-155.6L31.1 218.2c-6.5-6.4-8.7-15.9-5.9-24.5s10.3-14.9 19.3-16.3l153.2-22.6L266.3 13.5C270.4 5.2 278.7 0 287.9 0zm0 79L235.4 187.2c-3.5 7.1-10.2 12.1-18.1 13.3L99 217.9 184.9 303c5.5 5.5 8.1 13.3 6.8 21L171.4 443.7l105.2-56.2c7.1-3.8 15.6-3.8 22.6 0l105.2 56.2L384.2 324.1c-1.3-7.7 1.2-15.5 6.8-21l85.9-85.1L358.6 200.5c-7.8-1.2-14.6-6.1-18.1-13.3L287.9 79z",
          ],
          "iconName": "star",
          "prefix": "far",
        }
      }
    />
  </button>
</div>
`;

exports[`StarRating matches snapshot with value 3.5 1`] = `
<div
  className="tw:flex tw:space-x-1 tw:text-2xl"
>
  <button
    aria-label="Rate 1"
    className="tw:focus:outline-none tw:bg-transparent"
    disabled={false}
    key="1"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      {
        "background": "none",
        "border": "none",
        "cursor": "pointer",
        "padding": 0,
      }
    }
    tabIndex={0}
    type="button"
  >
    <FontAwesomeIcon
      color="#F8B84E"
      icon={
        {
          "icon": [
            576,
            512,
            [],
            "f005",
            "M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z",
          ],
          "iconName": "star",
          "prefix": "fas",
        }
      }
    />
  </button>
  <button
    aria-label="Rate 2"
    className="tw:focus:outline-none tw:bg-transparent"
    disabled={false}
    key="2"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      {
        "background": "none",
        "border": "none",
        "cursor": "pointer",
        "padding": 0,
      }
    }
    tabIndex={0}
    type="button"
  >
    <FontAwesomeIcon
      color="#F8B84E"
      icon={
        {
          "icon": [
            576,
            512,
            [],
            "f005",
            "M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z",
          ],
          "iconName": "star",
          "prefix": "fas",
        }
      }
    />
  </button>
  <button
    aria-label="Rate 3"
    className="tw:focus:outline-none tw:bg-transparent"
    disabled={false}
    key="3"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      {
        "background": "none",
        "border": "none",
        "cursor": "pointer",
        "padding": 0,
      }
    }
    tabIndex={0}
    type="button"
  >
    <FontAwesomeIcon
      color="#F8B84E"
      icon={
        {
          "icon": [
            576,
            512,
            [],
            "f005",
            "M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z",
          ],
          "iconName": "star",
          "prefix": "fas",
        }
      }
    />
  </button>
  <button
    aria-label="Rate 4"
    className="tw:focus:outline-none tw:bg-transparent"
    disabled={false}
    key="4"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      {
        "background": "none",
        "border": "none",
        "cursor": "pointer",
        "padding": 0,
      }
    }
    tabIndex={0}
    type="button"
  >
    <FontAwesomeIcon
      color="#F8B84E"
      icon={
        {
          "icon": [
            536,
            512,
            [],
            "f5c0",
            "M508.55 171.51L362.18 150.2 296.77 17.81C290.89 5.98 279.42 0 267.95 0c-11.4 0-22.79 5.9-28.69 17.81l-65.43 132.38-146.38 21.29c-26.25 3.8-36.77 36.09-17.74 54.59l105.89 103-25.06 145.48C86.98 495.33 103.57 512 122.15 512c4.93 0 10-1.17 14.87-3.75l130.95-68.68 130.94 68.7c4.86 2.55 9.92 3.71 14.83 3.71 18.6 0 35.22-16.61 31.66-37.4l-25.03-145.49 105.91-102.98c19.04-18.5 8.52-50.8-17.73-54.6zm-121.74 123.2l-18.12 17.62 4.28 24.88 19.52 113.45-102.13-53.59-22.38-11.74.03-317.19 51.03 103.29 11.18 22.63 25.01 3.64 114.23 16.63-82.65 80.38z",
          ],
          "iconName": "star-half-alt",
          "prefix": "fas",
        }
      }
    />
  </button>
  <button
    aria-label="Rate 5"
    className="tw:focus:outline-none tw:bg-transparent"
    disabled={false}
    key="5"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      {
        "background": "none",
        "border": "none",
        "cursor": "pointer",
        "padding": 0,
      }
    }
    tabIndex={0}
    type="button"
  >
    <FontAwesomeIcon
      color="#F8B84E"
      icon={
        {
          "icon": [
            576,
            512,
            [
              11088,
              61446,
            ],
            "f005",
            "M287.9 0c9.2 0 17.6 5.2 21.6 13.5l68.6 141.3 153.2 22.6c9 1.3 16.5 7.6 19.3 16.3s.5 18.1-5.9 24.5L433.6 328.4l26.2 155.6c1.5 9-2.2 18.1-9.7 23.5s-17.3 6-25.3 1.7l-137-73.2L151 509.1c-8.1 4.3-17.9 3.7-25.3-1.7s-11.2-14.5-9.7-23.5l26.2-155.6L31.1 218.2c-6.5-6.4-8.7-15.9-5.9-24.5s10.3-14.9 19.3-16.3l153.2-22.6L266.3 13.5C270.4 5.2 278.7 0 287.9 0zm0 79L235.4 187.2c-3.5 7.1-10.2 12.1-18.1 13.3L99 217.9 184.9 303c5.5 5.5 8.1 13.3 6.8 21L171.4 443.7l105.2-56.2c7.1-3.8 15.6-3.8 22.6 0l105.2 56.2L384.2 324.1c-1.3-7.7 1.2-15.5 6.8-21l85.9-85.1L358.6 200.5c-7.8-1.2-14.6-6.1-18.1-13.3L287.9 79z",
          ],
          "iconName": "star",
          "prefix": "far",
        }
      }
    />
  </button>
</div>
`;
